# egui-template

./: Cargo.toml  README.md  Trunk.toml  index.html
assets/: manifest.json  sw.js
scripts/: setup.ps1  setup.sh
src/: app.rs  main.rs
